Updating visiblilty for location links in footer to address AODA issue CKW–124

--- a/wp-content/themes/portent_enercare_2021/assets/scss/blocks/_locations-served.scss
+++ b/wp-content/themes/portent_enercare_2021/assets/scss/blocks/_locations-served.scss
@@ -87,6 +87,7 @@
 
 		&[hidden] {
 			animation: accordionOut 0.45s normal ease-in-out both 1;
+			display: none;
 			max-height: 0;
 			transition: max-height 1s;
 		}
